# midas-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  heroku.yml  init-databases.sh  migrate.sh
api/: Cargo.toml  (+1 more)
cli/: Cargo.toml  Dockerfile
cli/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  utils.rs
cli/src/commands/: databento.rs  historical.rs
cli/tests/: integration_test.rs  tickers.json
cli/tests/data/databento/: GLBX.MDP3_bbo-1m_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_tbbo_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn  GLBX.MDP3_trades_2024-01-02T00:00:00Z_2024-01-04T00:00:00Z.dbn
data/: Cargo.toml  tickers.json
data/src/: error.rs  lib.rs  utils.rs
data/src/vendors/: databento.rs
data/src/vendors/databento/: client.rs  dbn_compare.rs  extract.rs  load.rs  transform.rs  update.rs
historical/: Cargo.toml  Dockerfile
historical/src/: error.rs  logger.rs  main.rs  router.rs
historical/src/database/: create.rs  mod.rs  read.rs  utils.rs
historical/src/database/read/: common.rs  futures.rs  option.rs  rows.rs
historical/src/services/: load.rs  retrieve.rs  utils.rs
historical/src/services/load/: loader.rs
historical/src/services/retrieve/: heap.rs  query_task.rs  retriever.rs
historical/src/services/retrieve/old/: xold_retriever.rs  zretriever.rs
historical/tests/: integration_test.rs
instrument/: Cargo.toml  Dockerfile
instrument/src/: error.rs  logger.rs  main.rs  router.rs
instrument/src/database/: init.rs  mod.rs  symbols.rs
instrument/src/services/: symbols.rs
instrument/tests/: integration_test.rs
services/historical/: Cargo.toml  Dockerfile
services/historical/src/: error.rs  lib.rs  main.rs  response.rs  router.rs
services/historical/src/database/: init.rs  market_data.rs  mod.rs  symbols.rs  zmarket_data.rs
services/historical/src/database/market_data/: create.rs  read.rs
services/historical/src/services/: market_data.rs  mod.rs  symbols.rs  utils.rs
services/historical/tests/: integration_test.rs
tests/: Cargo.toml  config_real.toml  integration_test.rs
tests/data/: test_data.backtest.json  test_data.live_session.json
tests/data/databento/: GLBX.MDP3_bbo-1m_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1m_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_bbo-1s_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_mbp-1_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_mbp-1_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1d_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1h_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1m_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.v.0_HE.v.1_LE.v.0_LE.v.1_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.v.0_LE.v.0_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HE.v.1_LE.v.1_2024-01-19T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_ohlcv-1s_HEG4_HEJ4_LEG4_LEJ4_LEM4_HEM4_HEK4_2024-01-18T00:00:00Z_2024-01-24T00:00:00Z.dbn  GLBX.MDP3_tbbo_HE.c.0_LE.c.0_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  GLBX.MDP3_tbbo_HE.c.1_LE.c.1_2024-02-13T00:00:00Z_2024-02-16T00:00:00Z.dbn  (+10 more)
tests/src/: lib.rs
trading/: Cargo.toml  Dockerfile
trading/src/: error.rs  lib.rs  main.rs  router.rs
trading/src/database/: backtest.rs  init.rs  live.rs
trading/src/services/: backtest.rs  live.rs
trading/src/services/backtest/: loader.rs  retriever.rs
trading/tests/: integration_test.rs
trading/tests/data/: test_data.backtest.json  test_data.live.json
(+171 files in other folders)
