[package]
name = "midasbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenv = "0.15"
rust_decimal = { version = "1.32", features = ["db-postgres"] }
rust_decimal_macros = "1.34"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls", "runtime-actix-rustls", "macros", "bigdecimal", "json"] }
tokio = { version = "1.0", features = ["full"] }
bigdecimal = { version = "0.3", features = ["serde"] }
mbn = {path="../mbn/mbn/"}
serde_json = "1.0"
async-trait = "0.1.80"
axum = "0.6"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
hyper = "0.14"
tower = "0.4.13"
thiserror = "1.0.61"
anyhow = "1.0.86"
# rust_decimal = "1.27.0"
# rust_decimal_macros = "1.27.0"
# bigdecimal = "0.3"
derive_more = {version = "1.0.0-beta", features = ["from"]}
base64 = "0.13"

[dev-dependencies]
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.11", features = ["json"] }
axum-test-helper = "0.3.0"
serial_test = "0.5"
regex = "1.3.9"


# [[bin]]
# name = "questdb_migrate"
# path = "databases/questdb/migrate.rs"


