[workspace]
members = [
  "api", 
  "cli",
  "vendors"
]


# [package]
# name = "midas-server"
# version = "0.1.0"
# edition = "2021"
#
# [dependencies]
# # actix-web = "4.0"
# dotenv = "0.15"
# rust_decimal = { version = "1.32", features = ["db-postgres"] }
# rust_decimal_macros = "1.34"
# serde = { version = "1.0", features = ["derive"] }
# sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls", "runtime-actix-rustls", "macros", "bigdecimal", "json"] }
# tokio = { version = "1.0", features = ["full"] }
# bigdecimal = { version = "0.3", features = ["serde"] }
# serde_json = "1.0"
# async-trait = "0.1.80"
# axum = "0.6"
# tower-http = { version = "0.3", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
# hyper = "0.14"
# tower = "0.4.13"
# thiserror = "1.0.64"
# anyhow = "1.0.86"
# derive_more = {version = "1.0.0-beta", features = ["from"]}
# base64 = "0.13"
# sha2 = "0.10.8"
# tokio-stream = "0.1"
# futures = "0.3.30"
# async-stream = "0.3.5"
# futures-util = "0.3"  # or the latest version
# futures-core = "0.3.30"
# bytes = "1.7.1"
# time = { version = "0.3", features = ["macros"] }
# walkdir = "2.3"
# databento = "0.11.2"
# clap = {version= "4.5.13", features = ["derive"] }
# clap_derive = "4.5.13"
# mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }
# midas_client = { git="https://github.com/anthonyb8/midas-rs.git", branch ="main" }
#
# # # midas_client = {path = "../../client/rust/"}
# # mbn = {path="../mbn/mbn/"}
#
# [dev-dependencies]
# actix-rt = "2.4"
# tokio = { version = "1.0", features = ["full"]} 
# reqwest = { version = "0.11", features = ["json"] }
# axum-test-helper = "0.3.0"
# serial_test = "0.5"
# regex = "1.3.9"
#
# # Specify a binary target
# [[bin]]
# name = "midas-api"
# path = "src/api/main.rs"
#
# # Specify a binary target
# [[bin]]
# name = "midas-cli"
# path = "src/cli/main.rs"
# # Specify a binary target
#
# # [lib]
# # name="vendors"
# # path = "src/vendors/lib.rs"
#
# [lib]
# # name="midas-server"
# path = "src/lib.rs"
#
# [dependencies]
# reqwest = { version ="0.11", features = ["json"] }
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
# dotenv = "0.15"
# databento = "0.11.2"
# time = { version = "0.3", features = ["macros"] }
# polars = { version = "0.22.0", features = ["lazy", "temporal", "dtype-date"] }
# thiserror = "1.0.63"
# walkdir = "2.3"
# serde_json = "1.0.122"
# streaming-iterator = "0.1"
# anyhow = "1.0.87"
# async-trait = "0.1"
# dbn = "0.20.1"
# clap = {version= "4.5.13", features = ["derive"] }
# clap_derive = "4.5.13"
# # config = {path = "../config/"}
# mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }
# midas_client = { git="https://github.com/anthonyb8/midas-rs.git", branch ="main" }
# # midas_client = {path = "../../client/rust/"}
# # mbn = {path="../../mbn/mbn/"}
#
# [dev-dependencies]
# serial_test = "3.1.1"
# regex = "1.3.9"
#
# [lib]
# crate-type = ["rlib"]
