[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version= "4.5.13", features = ["derive"] }
clap_derive = "4.5.13"
thiserror = "1.0.61"
serde = {version ="1.0.205", features = ["derive"]}
serde_json = "1.0.122"
async-trait = "0.1"
tokio = {version ="1.38.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
derive_more = {version = "1.0.0-beta", features = ["from"]}
time = { version = "0.3", features = ["macros"] }
databento = "0.14.1"
walkdir = "2.3"
dbn = "0.22.1"
dotenv = "0.15"  # Or the latest version
vendors = {path="../vendors"}
mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }
midas_client = { git="https://github.com/anthonyb8/midas-rs.git", branch ="main" }

[dev-dependencies]
serial_test = "3.1.1"
regex = "1.3.9"
dotenv = {version="0.15.0"}
# mockall = "0.11.0"
assert_cmd = "2.0.16"
anyhow = "1.0.86"
once_cell = "1.10.0"  # or use lazy_static

[[bin]]
name = "midas-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
