[package]
name = "data_sources"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version ="0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
databento = "0.11.2"
time = { version = "0.3", features = ["macros"] }
polars = { version = "0.22.0", features = ["lazy", "temporal", "dtype-date"] }
thiserror = "1.0.63"
walkdir = "2.3"
serde_json = "1.0.122"
streaming-iterator = "0.1"
anyhow = "1.0.87"
dbn = "0.20.1"
clap = { version = "4.0", features = ["derive"] }
config = {path = "../config/"}
mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }
midas_client = { git="https://github.com/anthonyb8/midas-rs.git", branch ="main" }
# midas_client = {path = "../../client/rust/"}
# mbn = {path="../../mbn/mbn/"}

[dev-dependencies]
serial_test = "3.1.1"
regex = "1.3.9"

[lib]
crate-type = ["rlib"]



