[package]
name = "historical"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres","runtime-tokio-rustls",  "macros", "bigdecimal", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.80"
axum = "0.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "2.0.11"
anyhow = "1.0.86"
sha2 = "0.10.8"
async-stream = "0.3.5"
futures = "0.3.30"
bytes = "1.7.1"
mbinary = {version= "1.0.26"}

[dev-dependencies]
tower = "0.5.2"
hyper = "1.6.0"
anyhow = "1.0.86"
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.12.12", features = ["json"] }
axum-test-helper = "0.4.0"
serial_test = "3.2.0"
regex = "1.3.9"
dbn = "0.28.0"
databento ="0.20.0"

[[bin]]
name = "midas-historical"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
