[package]
name = "instrument"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls", "runtime-actix-rustls", "macros", "bigdecimal", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.80"
axum = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
bytes = "1.7.1"
mbinary = {version= "1.0.20"}

[dev-dependencies]
hyper = "0.14"
tower = "0.4.13"
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.11", features = ["json"] }
axum-test-helper = "0.3.0"
serial_test = "0.5"
regex = "1.3.9"
dbn = "0.22.1"
databento ="0.14.1"

[[bin]]
name = "midas-instrument"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
