[package]
name = "trading"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres","runtime-tokio-rustls", "macros", "bigdecimal", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.80"
axum = "0.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "2.0.11"
anyhow = "1.0.86"
futures = "0.3.30"
async-stream = "0.3.5"
chrono ="0.4.38"
bytes = "1.7.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
tokio-stream = "0.1.17"
mbinary = {version= "1.0.26"}

[dev-dependencies]
hyper = "1.6"
tower = "0.5.2"
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.12.12", features = ["json"] }
axum-test-helper = "0.4.0"
serial_test = "3.2.0"
regex = "1.3.9"

[[bin]]
name = "midas-trading"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
