[package]
name = "historical"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls", "runtime-actix-rustls", "macros", "bigdecimal", "json"] }
tokio = { version = "1.0", features = ["full"] }
bigdecimal = { version = "0.3", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.80"
axum = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
hyper = "0.14"
tower = "0.4.13"
thiserror = "1.0.61"
anyhow = "1.0.86"
derive_more = {version = "1.0.0-beta", features = ["from"]}
base64 = "0.13"
sha2 = "0.10.8"
tokio-stream = "0.1"
futures = "0.3.30"
async-stream = "0.3.5"
futures-util = "0.3"  
futures-core = "0.3.30"
bytes = "1.7.1"
pin-project = "1.1.6"
mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }

[dev-dependencies]
actix-rt = "2.4"
tokio = { version = "1.0", features = ["full"]} 
reqwest = { version = "0.11", features = ["json"] }
axum-test-helper = "0.3.0"
serial_test = "0.5"
regex = "1.3.9"

[[bin]]
name = "midas-historical"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
